2002-10-08  Jacob Smullyan  <jsmullyan@wnyc.org>

	* pylibs/xmlrpchandler.py (XMLRPCServer.handle_cgi): added support
	for cgis, thereby justifying this module's presence in pylibs.
	(munge_transports): a foul hack to give me the ability to use
	basic auth (or add any http headers I want to the request) with
	xmlrpclib.

2002-10-05  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/swcgi.py.in: swcgi was misbehaving due to not always
	reading all there was to be read off the aecgi socket; use of the
	SocketScience module fixed that.

2002-10-04    <smulloni@smullbola.smullyan.org>

	* pylibs/vfs/ftpfs.py: a vfs.FS implementation for FTP.
	For Python 2.2, provides some error recovery in case of timeouts.
	(FTPFile.robuster): robuster now even robuster.

2002-10-02  Jacob Smullyan  <jsmullyan@wnyc.org>

	* pylibs/PyDO/postconn.py (_dateConvertFromDB): my earlier fix
	broke something else.  This date parsing business should be done
	better.

	* pylibs/xmlrpchandler.py (XMLRPCServer._multicall): added
	system.multicall ("boxcarring") support; reworked the dispatching
	mechanism; now use standard fault codes; added workaround for
	pydoc bugs in pydoc.TextDoc.docroutine in dealing with lambdas
	(when and if pydoc is fixed, this code will stop working correctly).

2002-09-30  Jacob Smullyan  <jsmullyan@wnyc.org>

	* SkunkWeb/SkunkWeb/constants.py (SERVER_PORT),
	SkunkWeb/Services/web/protocol.py (_processRequest),
	SkunkWeb/SkunkWeb/ConfigAdditives.py (ServerPort): support for
	scoping based on the SERVER_PORT environmental variable.

2002-09-30    <smulloni@smullbola.smullyan.org>

	* pylibs/PyDO/postconn.py (_dateConvertFromDB): module was broken,
	at least with postgresql 7.2.2, when the timestamp returned contained
	milliseconds but no timezone.
	
2002-09-29    <smulloni@smullbola.smullyan.org>

	* pylibs/xmlrpchandler.py: helper module for writing XMLRPC servers. 

2002-09-04  Jacob Smullyan  <jsmullyan@wnyc.org>
